# fractal-visualisation

./: CMakeLists.txt  ChaosGameShape.cpp  ChaosGameShape.h  Exception.cpp  Exception.h  GeneralisedChaosGameShape.cpp  GeneralisedChaosGameShape.h  README.md  SierpinskiTriangle.cpp  SierpinskiTriangle.h  main.cpp  scalingFactor.cpp  scalingFactor.h  transformationsfile.txt
